objects/Chatter_Story__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the schedule feedcomment post enabled?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Seconds_Apart_For_Posting__c</fullName>
        <defaultValue>5</defaultValue>
        <description>seconds before 1st comment post after your post, 2nd post, 3rd post, etc...</description>
        <inlineHelpText>Works better if it's more than 10 seconds apart. Schedule job isn't very punctual...</inlineHelpText>
        <label>Seconds Apart For Posting</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Watch_Word__c</fullName>
        <description>the word to watch out for!</description>
        <label>Watch Word</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Auto do chatter comment when see the watch word on feedItem</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Chatter Story</label><nameField>
        <label>Chatter Story Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Chatter Stories</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Watch_Word__c</columns>
        <columns>Active__c</columns>
        <columns>Seconds_Apart_For_Posting__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>